--- a/_support/readme_files/gitREADME.adoc
+++ b/_support/readme_files/gitREADME.adoc
@@ -158,22 +158,22 @@ git clean -dfx
 
 == Delete a Git tag
 
-Use the “git tag” command with the “-d” option
+Use the “git tag” command with the `-d` option
 
 == From local
 
-  git tag -d v2023.0.16
+  git tag -d v2023.0.0
 
 === From remote
 
-  git push -d origin v2023.0.16
+  git push -d origin v2023.0.0
 
 == Set a Git tag
 
 # When modifying remember to issue a new tag command in git before committing,
 # then push the new tag
 #
-  git tag -a v2023.0.16 -m "v2023.0.16"
+  git tag -a v2023.0.0 -m "v2023.0.0"
   git push origin --tags
 
 == Update Git Index (cache) completely
@@ -197,10 +197,10 @@ or forced
 Then:
 
   git commit -am "Cleanup files"
-  git commit -am "New version 2023.0.16"
-  git commit --allow-empty -m "New version 2023.0.16"
-  git commit -am "Prepare new version 2023.0.16"
-  git commit -am "Latest files of version 2023.0.16"
+  git commit -am "New version 2023.0.0"
+  git commit --allow-empty -m "New version 2023.0.0"
+  git commit -am "Prepare new version 2023.0.0"
+  git commit -am "Latest files of version 2023.0.0"
 
 == Add file permissions on Windows
 
